--- a/styles.css
+++ b/styles.css
@@ -14,82 +14,97 @@ body {
 }
 
 .logo {
-    width: 150px;
+  width: 150px;
 }
 
 .text {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .nav-btn {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    font-size: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 .open-btn {
-    position: fixed;
-    top: 10px;
-    left: 10px;
+  position: fixed;
+  top: 10px;
+  left: 10px;
 }
 
 .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    transform: translateX(-100%);
-    transition: transform .3s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-in-out;
 }
 
 .nav.visible {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .nav-black {
-    background-color: rgb(34, 31, 31);
-    width: 60%;
-    max-width: 480px;
-    min-width: 320px;
+  background-color: rgb(34, 31, 31);
+  width: 60%;
+  max-width: 480px;
+  min-width: 320px;
+  transition-delay: 0.4s;
+}
+
+.nav-black.visible {
+  transition-delay: 0s;
 }
 
 .nav-red {
-    background-color: rgb(229, 9, 20);
-    width: 95%;
+  background-color: rgb(229, 9, 20);
+  width: 95%;
+  transition-delay: 0.2s;
+}
+
+.nav-red.visible {
+  transition-delay: 0.2s;
 }
 
 .nav-white {
-    background-color: #fff;
-    width: 95%;
-    padding: 40px;
-    position: relative;
+  background-color: #fff;
+  width: 95%;
+  padding: 40px;
+  position: relative;
+  transition-delay: 0s;
+}
+
+.nav-white.visible {
+    transition-delay: .4s;
 }
 
 .close-btn {
-    opacity: .3;
-    position: absolute;
-    top: 40px;
-    right: 30px;
+  opacity: 0.3;
+  position: absolute;
+  top: 40px;
+  right: 30px;
 }
 
 .list {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .list li {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 .list li a {
-    color: rgb(34, 31, 31);
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
+  color: rgb(34, 31, 31);
+  font-size: 14px;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .list ul {
-    list-style-type: none;
-    padding-left: 20px;
+  list-style-type: none;
+  padding-left: 20px;
 }
